# rss-reader

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/.cargo/: audit.toml
backend/migrations/: 0001_init.sql  0002_folders.sql  0003_instapaper.sql  0004_read_later.sql  0005_search.sql  0006_full_content.sql  0007_backup.sql  0008_read_later_settings.sql  0009_mute_rules.sql  0010_feed_health.sql  0011_article_notes.sql  0012_tags.sql  0013_digests.sql  0014_relevance.sql  0015_clustering.sql  0016_saved_views.sql  0017_automation_rules.sql  0018_stars_highlights.sql  0019_llm_settings.sql  0020_push_notifications.sql  0021_articles_created_at_index.sql  0022_auth_login.sql  0023_usage_tracking.sql  0024_greader_sync.sql  0025_feed_extract_full_content.sql  0026_saved_pages.sql
backend/src/: main.rs
backend/src/features/: mod.rs
backend/src/features/annotations/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/articles/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/ask/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/auth/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/automation_rules/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/backup/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/clustering/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/digest/: domain.rs  email.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/extraction/: domain.rs  handler.rs  mod.rs  service.rs
backend/src/features/feed_discovery/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/feed_health/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/feed_overview/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/feeds/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/folders/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/health/: handler.rs  mod.rs
backend/src/features/instapaper/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/llm_settings/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/mute_rules/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/notifications/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/opml/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/relevance/: domain.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/shared/: auth.rs  config.rs  db.rs  error.rs  fetch.rs  mod.rs  scheduler.rs  state.rs  usage.rs
(+231 files in other folders)
