[package]
name = "rss-reader-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
# Web framework (Tokio-based)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (runtime-checked queries; no compile-time DB connection required)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }

# Feed parsing & HTTP client
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
async-trait = "0.1"
scraper = "0.27.0"
ammonia = "4.1.3"
quick-xml = "0.41.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
